<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/spinnerVille"
            android:entries="@array/spinner_cities"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.159" app:layout_constraintVertical_bias="0.137"
            android:minHeight="48dp"/>
    <TextView
            android:text="@string/lblChooseCities"
            android:layout_width="130dp"
            android:layout_height="30dp" android:id="@+id/lblChooseCities"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/spinnerVille" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintVertical_bias="0.537" tools:text="@string/lblChooseCities"/>
    <TextView
            android:text="@string/lblSunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblSunrise"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerVille" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.127"
            tools:text="@string/lblSunrise"/>
    <TextView
            android:text="@string/lblSunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblSunset"
            app:layout_constraintTop_toBottomOf="@+id/lblSunrise" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintHorizontal_bias="0.128" tools:text="@string/lblSunset"/>
    <TextView
            android:text="@string/lbltemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblTemp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblSunset" android:layout_marginTop="40dp"
            app:layout_constraintHorizontal_bias="0.144" tools:text="@string/lbltemp"/>
    <TextView
            android:text="@string/lblPrecip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblPrecip"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/lblTemp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.176"
            tools:text="@string/lblPrecip" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content" android:id="@+id/lblFetchedSunrise"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/lblSunrise"
            app:layout_constraintHorizontal_bias="0.10" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerVille"/>
    <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content" android:id="@+id/lblFetchedSunset"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/lblSunset"
            app:layout_constraintHorizontal_bias="0.10" app:layout_constraintTop_toBottomOf="@+id/lblFetchedSunrise"
            android:layout_marginTop="40dp"/>
    <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content" android:id="@+id/lblFetchedTemp"
            app:layout_constraintTop_toBottomOf="@+id/lblFetchedSunset"
            app:layout_constraintStart_toEndOf="@+id/lblTemp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintHorizontal_bias="0.10"/>
    <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content" android:id="@+id/lblFetchedPrecip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblPrecip"
            app:layout_constraintTop_toBottomOf="@+id/lblFetchedTemp" android:layout_marginTop="40dp"
            app:layout_constraintHorizontal_bias="0.10" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/empty" android:id="@+id/imgWeather"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/lblPrecip" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.106" app:layout_constraintVertical_bias="0.495"
            android:contentDescription="@string/imgWeather"/>

</androidx.constraintlayout.widget.ConstraintLayout>
